--- a/css/style.css
+++ b/css/style.css
@@ -291,7 +291,7 @@ div.dang body {
   }
 
 
-.css-1mefc6n {
+.css-k1vhr4 {
     background-image: url(/app/danzak.github.io/SameFreshHypsilophodon.gif);
     background-size: cover;
     max-height: 100vh;
