--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,7 @@ div.dang body {
 
 
 .css-k1vhr4 {
-    background-image: url(/app/danzak.github.io/SameFreshHypsilophodon.gif);
+    background-image: url(https://thumbs.gfycat.com/SameFreshHypsilophodon-size_restricted.gif);
     background-size: cover;
     max-height: 100vh;
 }
